--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,6 +25,7 @@
 
 <!-- Optional theme -->
 <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"> -->
+<link href="https://fonts.googleapis.com/css?family=Arbutus+Slab|Handlee|Poiret+One&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
