--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,7 +28,7 @@ integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28an
 <!-- Optional theme -->
 <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"> -->
 <link href="https://fonts.googleapis.com/css?family=Arbutus+Slab|Handlee|Poiret+One&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>Re:Volve</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
